add carousel in about

--- a/middle-ui/src/index.html
+++ b/middle-ui/src/index.html
@@ -35,11 +35,15 @@
     </div>
 </div>
 <script src="components/angular/angular.min.js"></script>
+<script src="components/angular-animate/angular-animate.min.js"></script>
+<script src="components/angular-touch/angular-touch.min.js"></script>
 <script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="components/angular-clipboard/angular-clipboard.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqwMKe5s2MPJcexFu7liwZK6qt4ktBlyA"></script>
 <!-- build:js middle.min.js -->
+<script src="spinner.js"></script>
+<script src="loading-button.js"></script>
 <script src="main.js"></script>
 <!-- /build -->
 </body>
