--- a/middle-ui/src/index.html
+++ b/middle-ui/src/index.html
@@ -34,6 +34,7 @@
         </div>
     </div>
 </div>
+<script src="components/reconnectingWebsocket/reconnecting-websocket.min.js"></script>
 <script src="components/angular/angular.min.js"></script>
 <script src="components/angular-resource/angular-resource.min.js"></script>
 <script src="components/angular-animate/angular-animate.min.js"></script>
